Made few changes